--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.*/
+bin/
 
-# Test binary, built with `go test -c`
-*.test
+*.iml
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+go.sum
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+__debug_bin
